--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -44,9 +44,9 @@
 	<a href="temfiltroAdm.xhtml"><i class="fa fa-fw fa-filter"></i> Filtro</a>
   	
 	<h:form>
-	<div style="position:fixed; bottom:10px; width:190px">
+	<div style="position:fixed; bottom:8px; width:190px; color:dimgrey">
 		<p:commandLink action="#{sairMBean.matarSession}"><i class="fa fa-fw fa-sign-out"></i> Sair</p:commandLink>
-		
+		<center><h6> Copyright 2018 SENAI-SP © Todos os direitos reservados. </h6></center>
 		
 		<!-- TENTANDO CONFIRMAR SAIDA DO SISTEMA COM O USUARIO 
 					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
@@ -72,7 +72,7 @@
 	</p:panelGrid>
 
 	<p:dialog header="Ajuda" widgetVar="dlg1" minHeight="40">
-    <h:outputText value="Se tiver algum problema entrar em contato: (19)99999-9999 ou teste@gmail.com" />
+    <h:outputText value="Se tiver algum problema entrar em contato: (19)3837-6300 ou teste@gmail.com" />
 </p:dialog>
 
 
