--- a/src/main/webapp/telas-adm/temfiltroAdm.xhtml
+++ b/src/main/webapp/telas-adm/temfiltroAdm.xhtml
@@ -11,17 +11,31 @@
 	<ui:define name="title">Filtro ADM</ui:define>
 
 	<ui:define name="content">
-		<center>
-			<div class="naosei">
-				<p:panel value="Login"
-					style="margin-top: -3% !important; width: 600px">
 
-					<h:graphicImage library="img" name="/logo-senai.png"
-						style="width:300px; margin: 7px;" />
+		<p:growl>
+			<p:autoUpdate />
+		</p:growl>
 
-					<p />
-					<p:panel>
-						<h:form>
+		<iframe id="my_iframe" style="display: none;"></iframe>
+
+		<script type="text/javascript">
+			function Download(url) {
+				document.getElementById('my_iframe').src = url;
+			};
+		</script>
+
+		<h:form rendered="#{filtroMBean.filtroF}">
+			<center>
+				<div class="naosei">
+					<p:panel value="Login"
+						style="margin-top: -3% !important; width: 600px">
+
+						<h:graphicImage library="img" name="/logo-senai.png"
+							style="width:300px; margin: 7px;" />
+
+						<p />
+						<p:panel>
+
 
 							<center>
 								<h:panelGrid columns="1" style="margin-bottom:15px"
@@ -66,60 +80,64 @@
 									<P />
 
 									<h:outputLabel for="curso" value="Curso:" />
-									<p:selectOneMenu required="false" style="width: 160px"
-										panelStyle="width:150px" id="curso"
-										value="#{filtroMBean.eFiltro.idCurso}">
+									<p:selectOneMenu style="width: 160px" panelStyle="width:150px"
+										id="curso" value="#{filtroMBean.eFiltro.idCurso}">
 										<f:selectItem itemLabel="Selecione" itemValue="" />
 										<f:selectItems value="#{filtroMBean.curso}" var="curso"
-											itemLabel="#{curso.nome}" itemValue="#{curso.codigo}" />
+											itemLabel="#{curso.nome}"
+											itemValue="#{curso.codigo}-#{curso.nome}" />
 										<p:ajax event="change" listener="#{filtroMBean.attSemestre}"
 											update="semestre" />
 									</p:selectOneMenu>
 									<P />
 
-									<h:outputLabel for="semestre" value="Semestres:" />
-									<p:selectOneMenu required="false" style="width: 160px"
-										panelStyle="width:150px" id="semestre"
-										value="#{filtroMBean.eFiltro.semestre}">
+									<h:outputLabel for="semestre" value="Semestre:" />
+									<p:selectOneMenu style="width: 160px" panelStyle="width:150px"
+										id="semestre" value="#{filtroMBean.eFiltro.semestre}">
 										<f:selectItem itemLabel="Selecione" itemValue="" />
 										<f:selectItems value="#{filtroMBean.semestre}" var="semestre"
 											itemLabel="#{semestre.nome}" itemValue="#{semestre.codigo}" />
+										<!--  <p:ajax event="change" listener="#{filtroMBean.selSemestre}" update="" /> -->
 									</p:selectOneMenu>
 									<p />
+
 
 									<!-- AQUI ESTA O CAMPO IDIOMA -->
-									<h:outputLabel for="idioma" value="Idioma:" />
-									<p:selectOneMenu rendered="true" required="false" style="width: 160px"
-										panelStyle="width:150px" id="idioma"
-										value="#{filtroMBean.eFiltro.qualIdioma}">
-										<f:selectItem itemLabel="Indiferente" itemValue="0" />
-										<f:selectItem itemLabel="Ingles" itemValue="1" />
-										<f:selectItem itemLabel="Espanhol" itemValue="2" />
-										<f:selectItems value="#{filtroMBean.idioma}" var="idioma"
-											itemLabel="#{idioma.nome}" itemValue="#{idioma.codigo}" 
-										/>
-										<p:ajax event="change" listener="#{filtroMBean.liberaIdioma}"
-											process="idioma" update="nivel">
-										</p:ajax>
-									</p:selectOneMenu>
-									
-									<h:outputLabel for="nivel" value="Nivel:" />
-									<p:selectOneMenu disabled="#{filtroMBean.liberado}" required="false" style="width: 160px"
-										panelStyle="width:150px" id="nivel"
-										value="#{filtroMBean.eFiltro.nvIdioma}">
-										<f:selectItem itemLabel="Basico" itemValue="0" />
-										<f:selectItem itemLabel="Intermediario" itemValue="1" />
-										<f:selectItem itemLabel="Avançado" itemValue="2" />
-									</p:selectOneMenu>
-									
+									<h:panelGrid columns="6" style="margin-bottom: 10px">
+
+										<p:selectOneMenu rendered="true" required="false"
+											style="width: 160px" panelStyle="width:150px" id="idioma"
+											value="#{filtroMBean.eFiltro.qualIdioma}">
+											<f:selectItem itemLabel="Indiferente" itemValue="0" />
+											<f:selectItem itemLabel="Ingles" itemValue="1" />
+											<f:selectItem itemLabel="Espanhol" itemValue="2" />
+											<f:selectItems value="#{filtroMBean.idioma}" var="idioma"
+												itemLabel="#{idioma.nome}" itemValue="#{idioma.codigo}" />
+											<p:ajax event="change" listener="#{filtroMBean.liberaIdioma}"
+												process="idioma" update="nivel">
+											</p:ajax>
+										</p:selectOneMenu>
+
+
+										<h:outputLabel for="nivel" value="Nivel:"
+											style="margin-left: 50% " />
+										<p:selectOneMenu disabled="#{filtroMBean.liberado}"
+											required="false" style="width: 160px; margin-left: 20% "
+											panelStyle="width:150px" id="nivel"
+											value="#{filtroMBean.eFiltro.nvIdioma}">
+											<f:selectItem itemLabel="Basico" itemValue="0" />
+											<f:selectItem itemLabel="Intermediario" itemValue="1" />
+											<f:selectItem itemLabel="Avançado" itemValue="2" />
+										</p:selectOneMenu>
+									</h:panelGrid>
 									<p />
 
-									<h:panelGrid columns="1" style="margin-bottom: 10px">
 
+									<h:panelGrid columns="1" style="margin-bottom: 10px">
 										<h:outputText id="displayRange"
 											value="Faixa etária: #{filtroMBean.eFiltro.idade_inicio} a #{filtroMBean.eFiltro.idade_fim} anos" />
-										<p:slider required="true" for="txt6,txt7"
-											display="displayRange" style="width: 350px" range="true"
+										<p:slider for="txt6,txt7" display="displayRange"
+											style="width: 350px" range="true"
 											displayTemplate="De {min} a {max}" />
 									</h:panelGrid>
 									<h:inputHidden id="txt6"
@@ -129,32 +147,33 @@
 									<p />
 
 
+
 									<h:outputText value="Experiência: " />
 									<p:selectOneRadio id="experiencia"
 										value="#{filtroMBean.eFiltro.experiencia}">
-										<f:selectItem itemLabel="Sim" itemValue="Sim" />
-										<f:selectItem itemLabel="Não" itemValue="Nao" />
+										<f:selectItem itemLabel="Sim" itemValue="1" />
+										<f:selectItem itemLabel="Não" itemValue="2" />
+										<f:selectItem itemLabel="Indiferente" itemValue="0" />
 									</p:selectOneRadio>
 
 									<p />
 
 
 									<h:outputText value="Sexo: " />
-									<p:selectOneRadio id="sexo"
-										value="#{filtroMBean.eFiltro.sexo}">
-										<f:selectItem itemLabel="Homem" itemValue="Homem" />
-										<f:selectItem itemLabel="Mulher" itemValue="Mulher" />
-										<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
+									<p:selectOneRadio id="sexo" value="#{filtroMBean.eFiltro.sexo}">
+										<f:selectItem itemLabel="Homem" itemValue="1" />
+										<f:selectItem itemLabel="Mulher" itemValue="2" />
+										<f:selectItem itemLabel="Indiferente" itemValue="0" />
 									</p:selectOneRadio>
 
 									<p />
 									<h:outputText value="Deficiência: " />
 									<p:selectOneRadio id="deficiencia"
 										value="#{filtroMBean.eFiltro.deficiencia}">
-										<f:selectItem itemLabel="Sim" itemValue="Sim" />
-										<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
+										<f:selectItem itemLabel="Sim" itemValue="1" />
+										<f:selectItem itemLabel="Não" itemValue="0" />
+										<f:selectItem itemLabel="Indiferente" itemValue="2" />
 									</p:selectOneRadio>
-
 									<p />
 
 
@@ -165,66 +184,70 @@
 
 							<center>
 								<h:commandButton value="Filtrar"
-									action="#{cadastroEmpresaMBean.salvar}"
+									action="#{filtroMBean.enviarFiltro}"
 									style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 							</center>
 
-						</h:form>
 
-						<p />
+							<p />
+						</p:panel>
+					</p:panel>
+				</div>
+			</center>
+		</h:form>
+		<!-- AQUI FICA A TELA DE DOWNLOAD DOS CURRICULOS SE O FILTRO FOR PREENCHIDO CORRETAMENTE! -->
+		<h:form id="telaCur" rendered="#{filtroMBean.filtroP}">
 
-						<!-- AQUI FICA A TELA DE DOWNLOAD DOS CURRICULOS SE O FILTRO FOR PREENCHIDO CORRETAMENTE! -->
-						<h:form id="telaCur" rendered="#{filtroMBean.filtroP}">
+			<center>
+				<p:panel value="Login" style="width: 600px">
 
-							<center>
-								<p:panel value="Login" style="width: 600px">
+					<h:graphicImage library="img" name="/logo-senai.png"
+						style="width:300px; margin: 7px;" />
 
-									<h:graphicImage library="img" name="/logo-senai.png"
-										style="width:300px; margin: 7px;" />
+					<p />
+					<p:panel>
 
-									<p />
-									<p:panel>
+						<center>
 
-										<center>
+							<p:dataTable var="cl" value="#{listarCurriculoMBean.cl}">
 
-											<p:dataTable var="cl" value="#{listarCurriculoMBean.cl}">
-
-												<p:column headerText="Nome">
-													<f:facet name="header">Nome do Aluno</f:facet>
+								<p:column headerText="Nome">
+									<f:facet name="header">Nome do Aluno</f:facet>
        								 	#{cl.nomeDoAluno}
 										</p:column>
 
-												<p:column id="Download" icon="ui-icon-search"
-													style="width:60px">
-													<h:outputText />
-													<p:commandButton icon="ui-icon-arrowthick-1-s" />
-												</p:column>
+								<p:column id="Download" icon="ui-icon-search" style="width:60px">
+									<h:outputText />
+									<p:commandButton icon="ui-icon-arrowthick-1-s" />
+								</p:column>
 
-												<p:column id="Impressão" style="width:60px">
-													<p:commandButton icon="ui-icon-print" ajax="false"
-														action="#{listarCurriculoMBean.imprimir}"
-														onclick="this.form.target='_blank'">
+								<p:column id="Impressão" style="width:60px">
+									<p:commandButton icon="ui-icon-print" ajax="false"
+										action="#{listarCurriculoMBean.imprimir}"
+										onclick="this.form.target='_blank'">
 
-														<f:setPropertyActionListener value="#{cl}"
-															target="#{listarCurriculoMBean.cur}"></f:setPropertyActionListener>
+										<f:setPropertyActionListener value="#{cl}"
+											target="#{listarCurriculoMBean.cur}">
+										</f:setPropertyActionListener>
 
-													</p:commandButton>
-												</p:column>
+									</p:commandButton>
+								</p:column>
 
-											</p:dataTable>
+							</p:dataTable>
 
-										</center>
-									</p:panel>
-								</p:panel>
-							</center>
+						</center>
 
-						</h:form>
-
+						<h:commandButton value="Finalizar"
+							action="#{filtroMBean.finalizaBt}"
+							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 
 					</p:panel>
 				</p:panel>
-			</div>
-		</center>
+			</center>
+
+		</h:form>
+
+
 	</ui:define>
 </ui:composition>
 </html>
