--- a/src/main/webapp/telas-empresa/historico.xhtml
+++ b/src/main/webapp/telas-empresa/historico.xhtml
@@ -11,7 +11,7 @@
 	<ui:define name="css">
 		<link rel="stylesheet" type="text/css" href="resources/css/cssEmp.css" />
 	</ui:define>
-	<ui:define name="title">Criar ADM</ui:define>
+	<ui:define name="title">Histórico</ui:define>
 
 
 	<ui:define name="content">
