--- a/src/main/webapp/telas-adm/empresasADM.xhtml
+++ b/src/main/webapp/telas-adm/empresasADM.xhtml
@@ -8,7 +8,7 @@
 
 	<ui:define name="css">
 		<link rel="stylesheet" type="text/css"
-			href="resources/css/homeADM.css" />
+			href="/secv/resources/css/empresasADM.css" />
 	</ui:define>
 
 	<ui:define name="title">Empresas ADM</ui:define>
