--- a/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
+++ b/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
@@ -12,11 +12,10 @@
 		<h:body>
 
 			<center>
-				<p:panel value="Login" style="width: 600px">
+				<p:panel value="Login" style="width: 25%; margin-top: 2%" >
 
 
 					<p />
-					<p:panel>
 						<h:form>
 
 							<center>
@@ -26,7 +25,7 @@
 									<h:outputText id="cnpj" value="CNPJ: "
 										style="font-weight:bold;" />
 									<p:inputText disabled="true" value="#{usuarioMBean.emp.CNPJ}"
-										style="font-weight: bold;" />
+										style="width:100% ;font-weight: bold;" />
 									<br />
 									<p:outputLabel id="nomeEmp" value="Nome: " />
 									<p:inputText disabled="true" value="#{usuarioMBean.emp.nome}"
@@ -73,8 +72,6 @@
 						</h:form>
 
 						<p />
-
-					</p:panel>
 				</p:panel>
 			</center>
 
