--- a/src/main/webapp/APP/graficosAPP.xhtml
+++ b/src/main/webapp/APP/graficosAPP.xhtml
@@ -31,28 +31,30 @@
 
 		<p:panelGrid border="1" style="width:100%;height:100%;border-block-end:0px">
 			<p:row>
-				<p:column style="width:25%;height:25%">
+				<p:column style="width:50%;height:50%">
 					<p:chart type="line" model="#{chartsMBean.lineModel}"
-						style="height:75%; width:25%;margin-left:10%;margin-right:10%;color:black" />
+						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black" />
 				</p:column>
 				</p:row>
 				
 				<p:row>
-				<p:column style="width:25%;height:25%;">
+				<p:column style="width:50%;height:50%;">
 					<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
 						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black" />
 				</p:column> 
 			</p:row>
-			
+		</p:panelGrid>
+		
+		<p:panelGrid border="1" style="width:100%;height:100%;border-block-end:0px">
 			<p:row>
-				<p:column style="width:25%;height:25%">
+				<p:column style="width:50%;height:50%">
 					<p:chart type="bar" model="#{chartBarMBean.barModel}"
 						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black" />
 				</p:column>
 				</p:row>
 				
 				<p:row>
-				<p:column style="width:25%;height:25%">
+				<p:column style="width:50%;height:50%">
 					<p:chart type="bar" model="#{chartLineMBean.horizontalBarModel}"
 						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black"/>
 				</p:column>
