Agr sim GraficosAPP OK
Mania de comita sem conferir kkk

--- a/src/main/webapp/APP/graficosAPP.xhtml
+++ b/src/main/webapp/APP/graficosAPP.xhtml
@@ -10,6 +10,7 @@
 <h:head>
 	<link rel="shortcut icon" href="/secv/resources/img/favicon (2).ico"  />
 	<link rel="stylesheet" type="text/css" href="/secv/resources/css/templateADM.css" />
+	<link rel="stylesheet" type="text/css" href="/secv/resources/css/graficoAPP.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 	<ui:insert name="css"></ui:insert>
