tela historico adm 100%
umas coisinhas basicas

--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -42,6 +42,8 @@
 	<a class="criar" href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
 	<a class="perfil" href="perfilADM.xhtml"><i class="fa fa-fw fa-cog"></i> Perfil</a>
 	<a class="filtro" href="temfiltroAdm.xhtml"><i class="fa fa-fw fa-filter"></i> Filtro</a>
+	<a class="historico" href="historicoADM.xhtml"><i class="fa fa-fw fa-filter"></i> Historico</a>
+	
   	
 	<h:form>
 	<div style="position:fixed; bottom:8px; width:190px; color:dimgrey">
