Icone + Menu + HistoricoADM
Icone de mala na poha td agr
Menu ta pintando historico
Historico tem icone

tirei um css q tava puxando nada pelo jeito(historicoADM)

--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -8,7 +8,7 @@
 
 
 <h:head>
-	<link rel="shortcut icon" href="/secv/resources/img/favicon (2).ico"  />
+	<link rel="shortcut icon" href="/secv/resources/img/favicon.ico"  />
 	<link rel="stylesheet" type="text/css" href="/secv/resources/css/templateADM.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
@@ -42,7 +42,7 @@
 	<a class="criar" href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
 	<a class="perfil" href="perfilADM.xhtml"><i class="fa fa-fw fa-cog"></i> Perfil</a>
 	<a class="filtro" href="temfiltroAdm.xhtml"><i class="fa fa-fw fa-filter"></i> Filtro</a>
-	<a class="historico" href="historicoADM.xhtml"><i class="fa fa-fw fa-filter"></i> Historico</a>
+	<a class="historico" href="historicoADM.xhtml"><i class="fa fa-fw fa-history"></i> Historico</a>
 	
   	
 	<h:form>
