--- a/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
@@ -13,6 +13,7 @@
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="/secv/resources/css/cssEmp.css" />
+	<link rel="shortcut icon" href="/secv/resources/img/favicon.ico"  />
 
 
 </h:head>
