--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="resources/css/cssEmp.css" />
 	<title>Página Inicial </title>
+	<link rel="shortcut icon" href="/secv/resources/img/favicon.ico"  />
 </h:head>
 <h:body>
 	<p:growl>
