--- a/src/main/webapp/telas-adm/historicoADM.xhtml
+++ b/src/main/webapp/telas-adm/historicoADM.xhtml
@@ -9,7 +9,8 @@
 <ui:composition template="/WEB-INF/templateADM/templateADM.xhtml">
 
 	<ui:define name="css">
-		<link rel="stylesheet" type="text/css" href="resources/css/cssEmp.css" />
+		<link rel="stylesheet" type="text/css"
+			href="/secv/resources/css/historicoADM.css" />
 	</ui:define>
 	<ui:define name="title">Histórico Adm</ui:define>
 
